--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
+    "geist": "^1.4.2",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
     "next": "^15.2.3",
